--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,19 @@
             <artifactId>allure-testng</artifactId>
             <version>2.19.0</version>
         </dependency>
+
+        <dependency>  
+            <groupId>org.apache.poi</groupId>  
+            <artifactId>poi</artifactId>  
+            <version>5.4.1</version>  
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.4.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
