--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <selenium.version>4.32.0</selenium.version>
-        <testng.version>7.11.0</testng.version>
+        <testng.version>7.4.0</testng.version>
         <commons-io.version>2.19.0</commons-io.version>
         <log4j.version>2.24.3</log4j.version>
         <log4j-api.version>2.24.3</log4j-api.version>
@@ -74,6 +74,13 @@
             <version>${allure.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-attachments -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-attachments</artifactId>
+            <version>2.29.1</version>
+        </dependency>
+
         <dependency>  
             <groupId>org.apache.poi</groupId>  
             <artifactId>poi</artifactId>  
@@ -111,6 +118,9 @@
                     <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
+                    <systemPropertyVariables>
+                        <allure.results.directory>allure-results</allure.results.directory>
+                    </systemPropertyVariables>
                 </configuration>
                 <dependencies>
                     <dependency>
