--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -7,4 +7,4 @@ timeoutWait=20
 
 
 # Specify the URL of the remote WebDriver
-remoteURL=http://localhost:4444/wd/hub
+remoteURL=http://selenium-hub:4444
